Avoid use of primitive wrapper constructors
Deprecated in Java 9.