@@ -79,7 +79,7 @@ public class DatapointHandler extends ParseSax.HandlerForGeneratedRequestWithRes
    private Double doubleOrNull() {
       String string = currentText.toString().trim();
       if (!string.equals("")) {
-         return new Double(string);
+         return Double.valueOf(string);
       }
       return null;
    }
